--- a/benchmarks/rx9070xt-benchmarking.ipynb
+++ b/benchmarks/rx9070xt-benchmarking.ipynb
@@ -131,7 +131,30 @@
     "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +300 | -110 | Fast Timing | 2790 | 7003 | 70.04 FPS |\n",
     "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +300 | -95 | Fast Timing | 2790 | 7005 | 70.06 FPS |\n",
     "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +400 | -120 | Fast Timing | 2790 | 7021 | 70.22 FPS |\n",
-    "| 3DMark | Speedway | RX 9070 XT Taichi | 75% | Factory | -50 | Fast Timing | 2618 | 6401 | 64.01 FPS |"
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 75% | Factory | -50 | Fast Timing | 2618 | 6401 | 64.01 FPS |\n",
+    "\n",
+    "#### Some Notes on Temperatures\n",
+    "\n",
+    "TLDR the card doesnt get hot enough to care with a non-silent fan profile.\n",
+    "\n",
+    "- Idle\n",
+    "  - gpu 29c\n",
+    "  - memory 54c (A little heatsoaked from benchmarking, usually 50-52c)\n",
+    "  - hotspot 32c\n",
+    "- Speedway Factory Spec\n",
+    "  - gpu 42c\n",
+    "  - memory 78c\n",
+    "  - hotspot 70c\n",
+    "- Speedway Max\n",
+    "  - 110% Power +300mhz -95mv Fast Timing 2766mhz VRAM\n",
+    "  - gpu 44c\n",
+    "  - memory 82c\n",
+    "  - hotspot 76c\n",
+    "- Speedway Efficient (This is a typical ideal setup for me, factory speeds -80w)\n",
+    "  - 75% Power Factory mhz -50mv Fast Timing 2618mhz VRAM\n",
+    "  - gpu 41\n",
+    "  - memory 76 \n",
+    "  - hotspot 57"
    ]
   },
   {
