--- a/benchmarks/rx9070xt-benchmarking.ipynb
+++ b/benchmarks/rx9070xt-benchmarking.ipynb
@@ -154,13 +154,11 @@
     "  - 75% Power Factory mhz -50mv Fast Timing 2618mhz VRAM\n",
     "  - gpu 41\n",
     "  - memory 76 \n",
-    "  - hotspot 57"
+    "  - hotspot 57\n",
+    "\n",
+    "Warzone 4k FSR4 Performance with just a few tweaked settings I normally get 200fps\n",
+    "With the efficient 75% power settings I am still around 200fps but only running 255w."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
