--- a/benchmarks/9950x3d-benchmarking.ipynb
+++ b/benchmarks/9950x3d-benchmarking.ipynb
@@ -11,6 +11,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
+    "# Create a conda env\n",
+    "conda create -n cpu python=3.12 -y\n",
+    "conda activate cpu\n",
+    "\n",
+    "# Install the things\n",
+    "pip3 install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cpu\n",
+    "pip install safetensors matplotlib pillow numpy pandas jupyterlab accelerate diffusers tqdm IProgress transformers scikit-learn\n",
+    "\n",
+    "# Spin up Jupyter Lab\n",
+    "jupyter lab password\n",
+    "jupyter lab --ip 10.0.0.35 --port 8888 --no-browser\n",
+    "```\n",
+    "\n",
+    "Then connect via VSCode or however you normally connect to a Jupyter Lab/Notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Specs\n",
     "\n",
     "- Specs\n",
@@ -499,21 +520,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cpu",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.9"
   }
  },
  "nbformat": 4,
