--- a/benchmarks/9950x3d-benchmarking.ipynb
+++ b/benchmarks/9950x3d-benchmarking.ipynb
@@ -65,6 +65,10 @@
     "| 9950X3d | 58c Thermal Limit CO -25 | 43479 | 166w | 72056 | 4855 |\n",
     "| 9950X3d | 85c Thermal Limit CO -30 Inf-Fab 2.1ghz | 46114 | 208w (71.5c max) | 74521 | 4860 |\n",
     "| 9950X3d | 85c Thermal Limit CO -30 Inf-Fab 2.2ghz DDR5 6200mhz | 46370 | 209w (70.2c max) | Crash | Crash |\n",
+    "| 9950X3d | 59c Thermal Limit CO -25 x5 Scalar | 43099 | 170w | 71853 | 4867 |\n",
+    "| 9950X3d | 80c Thermal Limit CO -25 Inf-Fab 2.133ghz DDR5 6200mhz | 45407 | 200w (69.5c max) | 73842 | 4855 |\n",
+    "| 9950X3D | MB Thermal/Power Limit CO -30 x10 Scalar +200mhz | 46270 | 212w (71.9c max) | 74376 | 4930 |\n",
+    "| 9950X3d | 105w Eco Mode CO -30 x10 Scalar +200mhz | 40215 | 53.6c | Crashed | Crashed |\n",
     "\n",
     "We are clearly limited by power here. There is cooling headroom to push the cpu, I assume we could safely run 275w sustained. However, there will be minimal gains as the wattage goes up. I personally dont see much reason to push this past the 65c CO -30 performance setting unless you are just chasing benchmark numbers. I would also be fine running 51c all core all day on the 105w eco mode.\n",
     "\n",
