--- a/tensorflow-directml-9070xt/test.ipynb
+++ b/tensorflow-directml-9070xt/test.ipynb
@@ -167,28 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available physical devices:\n",
-      "PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU')\n",
-      "PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')\n",
-      "\n",
-      "GPU devices found:\n",
-      "PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')\n",
-      "Executing op _EagerConst in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op _EagerConst in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "Executing op MatMul in device /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "\n",
-      "Result of matrix multiplication on GPU:\n",
-      "tf.Tensor([[11.]], shape=(1, 1), dtype=float32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -223,94 +204,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Train Something\n",
-    "\n",
-    "This actually works very well without any issues."
+    "#### Check CPU Flags"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " conv2d (Conv2D)             (None, 26, 26, 32)        320       \n",
-      "                                                                 \n",
-      " max_pooling2d (MaxPooling2D  (None, 13, 13, 32)       0         \n",
-      " )                                                               \n",
-      "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 11, 11, 64)        18496     \n",
-      "                                                                 \n",
-      " max_pooling2d_1 (MaxPooling  (None, 5, 5, 64)         0         \n",
-      " 2D)                                                             \n",
-      "                                                                 \n",
-      " flatten (Flatten)           (None, 1600)              0         \n",
-      "                                                                 \n",
-      " dense (Dense)               (None, 128)               204928    \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (None, 10)                1290      \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 225,034\n",
-      "Trainable params: 225,034\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "Epoch 1/10\n",
-      "59/59 [==============================] - 1s 9ms/step - loss: 0.6721 - accuracy: 0.8241 - val_loss: 0.1929 - val_accuracy: 0.9432\n",
-      "Epoch 2/10\n",
-      "59/59 [==============================] - 0s 7ms/step - loss: 0.1533 - accuracy: 0.9550 - val_loss: 0.0959 - val_accuracy: 0.9718\n",
-      "Epoch 3/10\n",
-      "59/59 [==============================] - 0s 7ms/step - loss: 0.0939 - accuracy: 0.9727 - val_loss: 0.0737 - val_accuracy: 0.9771\n",
-      "Epoch 4/10\n",
-      "59/59 [==============================] - 0s 7ms/step - loss: 0.0698 - accuracy: 0.9790 - val_loss: 0.0577 - val_accuracy: 0.9824\n",
-      "Epoch 5/10\n",
-      "59/59 [==============================] - 0s 7ms/step - loss: 0.0571 - accuracy: 0.9827 - val_loss: 0.0493 - val_accuracy: 0.9827\n",
-      "Epoch 6/10\n",
-      "59/59 [==============================] - 0s 7ms/step - loss: 0.0483 - accuracy: 0.9853 - val_loss: 0.0403 - val_accuracy: 0.9868\n",
-      "Epoch 7/10\n",
-      "59/59 [==============================] - 0s 7ms/step - loss: 0.0419 - accuracy: 0.9873 - val_loss: 0.0410 - val_accuracy: 0.9864\n",
-      "Epoch 8/10\n",
-      "59/59 [==============================] - 0s 7ms/step - loss: 0.0376 - accuracy: 0.9884 - val_loss: 0.0449 - val_accuracy: 0.9862\n",
-      "Epoch 9/10\n",
-      "59/59 [==============================] - 0s 7ms/step - loss: 0.0349 - accuracy: 0.9892 - val_loss: 0.0352 - val_accuracy: 0.9882\n",
-      "Epoch 10/10\n",
-      "59/59 [==============================] - 0s 7ms/step - loss: 0.0305 - accuracy: 0.9907 - val_loss: 0.0346 - val_accuracy: 0.9892\n",
-      "313/313 [==============================] - 1s 2ms/step - loss: 0.0346 - accuracy: 0.9892\n",
-      "\n",
-      "Test accuracy: 0.9892\n",
-      "Elapsed time: 5.25 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import cpuinfo\n",
+    "info = cpuinfo.get_cpu_info()\n",
+    "print(\"CPU:\", info['brand_raw'])\n",
+    "print(\"Flags:\", info['flags'])  # Look for 'avx512f' (foundation) and others like 'avx512dq', 'avx512bw'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training FP32 9950X3D vs RX 9070 XT\n",
+    "\n",
+    "This is my first real dip into TensorFlow, and also my second attention at training a model with DirectML. So far, TF is much more compliant with DirectML. There are limitations with DirectML and the version of TF (2.10) that I am running. We cannot utilize mixed precision so we are limited by the FP32 dtype. \n",
+    "\n",
+    "- RX 9070 XT\n",
+    "    - Test accuracy: 0.9851\n",
+    "    - Elapsed time: 3.16 seconds\n",
+    "\n",
+    "- 9950X3D AVX2 (90% CPU Utilization)\n",
+    "    - Test accuracy: 0.9843\n",
+    "    - Elapsed time: 35.09 seconds\n",
+    "\n",
+    "- 9950X3D AVX512 (65% CPU Utilization)\n",
+    "    - Test accuracy: 0.9854\n",
+    "    - Elapsed time: 30.40 seconds\n",
+    "\n",
+    "#### <font color=\"red\">Restart The Python Kernel When Flipping Between Devices</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers, models\n",
     "import numpy as np\n",
     "import time\n",
+    "import os\n",
     "\n",
-    "# Enable device placement logging to confirm GPU usage\n",
-    "tf.debugging.set_log_device_placement(False)\n",
-    "tf.config.optimizer.set_jit(True)  # Enable XLA at the start of your script\n",
+    "# Configuration: Set to 'CPU' or 'GPU'\n",
+    "DEVICE = 'GPU'  # For AVX-512 testing\n",
+    "\n",
+    "# Optimize for CPU with oneDNN and threading\n",
+    "os.environ['TF_ENABLE_ONEDNN_OPTS'] = '1'  # Enable oneDNN for AVX-512\n",
+    "os.environ['OMP_NUM_THREADS'] = '16'  # Match physical cores (16 for 9950X3D)\n",
+    "os.environ['KMP_AFFINITY'] = 'granularity=fine,compact,1,0'  # Pin threads to cores\n",
+    "tf.config.threading.set_intra_op_parallelism_threads(16)  # One thread per core\n",
+    "tf.config.threading.set_inter_op_parallelism_threads(2)  # Minimal inter-op parallelism\n",
+    "tf.debugging.set_log_device_placement(False)  # Set True to verify AVX-512 ops\n",
+    "tf.config.optimizer.set_jit(True)  # Enable XLA\n",
     "\n",
     "# Load and preprocess the MNIST dataset\n",
     "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.mnist.load_data()\n",
-    "x_train = x_train.astype('float32') / 255.0  # Normalize to [0, 1]\n",
+    "x_train = x_train.astype('float32') / 255.0\n",
     "x_test = x_test.astype('float32') / 255.0\n",
-    "x_train = np.expand_dims(x_train, axis=-1)  # Add channel dimension: (28, 28, 1)\n",
+    "x_train = np.expand_dims(x_train, axis=-1)\n",
     "x_test = np.expand_dims(x_test, axis=-1)\n",
     "\n",
-    "# Convert labels to categorical (one-hot encoding)\n",
+    "# Convert labels to categorical\n",
     "y_train = tf.keras.utils.to_categorical(y_train, 10)\n",
     "y_test = tf.keras.utils.to_categorical(y_test, 10)\n",
     "\n",
-    "# Define a simple convolutional neural network\n",
+    "# Create datasets explicitly\n",
+    "train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train)).batch(512).prefetch(tf.data.AUTOTUNE)\n",
+    "val_dataset = tf.data.Dataset.from_tensor_slices((x_test, y_test)).batch(512).prefetch(tf.data.AUTOTUNE)\n",
+    "\n",
+    "# Define the model\n",
     "model = models.Sequential([\n",
     "    layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
@@ -329,18 +300,17 @@
     "# Print model summary\n",
     "model.summary()\n",
     "\n",
-    "start_time = time.perf_counter()\n",
-    "# Train the model (operations will automatically offload to GPU if available)\n",
-    "history = model.fit(x_train, y_train,\n",
-    "                    epochs=10,\n",
-    "                    batch_size=1024,\n",
-    "                    validation_data=(x_test, y_test))\n",
+    "# Set device based on configuration\n",
+    "device_name = '/CPU:0' if DEVICE == 'CPU' else '/GPU:0'\n",
+    "with tf.device(device_name):\n",
+    "    start_time = time.perf_counter()\n",
+    "    history = model.fit(train_dataset,\n",
+    "                        epochs=5,\n",
+    "                        validation_data=val_dataset)\n",
+    "    test_loss, test_acc = model.evaluate(val_dataset)\n",
+    "    end_time = time.perf_counter()\n",
     "\n",
-    "# Evaluate the model\n",
-    "test_loss, test_acc = model.evaluate(x_test, y_test)\n",
-    "end_time = time.perf_counter()\n",
     "elapsed_time = end_time - start_time\n",
-    "\n",
     "print(f\"\\nTest accuracy: {test_acc:.4f}\\nElapsed time: {elapsed_time:.2f} seconds\")"
    ]
   },
@@ -354,7 +324,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "tensordml",
    "language": "python",
    "name": "python3"
   },
