--- a/benchmarks/rx9070xt-benchmarking.ipynb
+++ b/benchmarks/rx9070xt-benchmarking.ipynb
@@ -39,6 +39,10 @@
    "source": [
     "### LM Studio LLM Performance\n",
     "\n",
+    "#### Driver 25.3.2 3/16/2025 has improved LLM performance over Vulkan\n",
+    "\n",
+    "I also picked up a Zotax 5070 Ti for cuda ops, testing Vulkan to Vulkan the 9070 XT is 3-5% faster. When running on cuda obviously the 5070 Ti is faster. It will be quite the race if these GPU's get ROCm support. Some of the retested models below increase a few %, others had major jumps like MS Phi 4 which increased 500%. The same goes for DeepSeek R1 Qwen 2.5 14b, it also jump up around 500%. \n",
+    "\n",
     "- LM Studio Windows 11 Performance\n",
     "  - CPU runtime only\n",
     "  - Default Context Size\n",
@@ -62,19 +66,19 @@
     "\n",
     "| Application | GPU | Power | Offload |  Model | Parameters | Quant | Tok/sec | Tokens | Time To 1st Token |\n",
     "| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Gemma 3 Instruct | 1B | Q4 | 239.89 | 513 | 0.15s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Gemma 3 Instruct | 4B | Q4 | 135.52 | 490 | 0.12s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Gemma 3 Instruct | 12B | Q4 | 47.51 | 453 | 0.29s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Llama 3.2 Instruct | 1B | Q4 | 360.55 | 514 | 0.00s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Llama 3.2 Instruct | 3B | Q4 | 172.25 | 495 | 0.10s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Phi 4 | 15B | Q4 | 10.79 | 565 | 0.83s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | DeepSeek R1 Distill Llama | 8B | Q4 | 89.68 | 950 | 0.18s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | DeepSeek R1 Distill Qwen | 14B | Q4 | 10.59 | 801 | 0.40s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | DeepSeek R1 Distill Qwen | 7B | Q4 | 93.26 | 1190 | 0.17s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Qwen 2.5 Coder Instruct | 3B | Q4 | 172.59 | 477 | 0.11s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Qwen 2.5 Coder Instruct | 14B | Q4 | 10.62 | 494 | 0.40s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Qwen 2.5 Instruct 1M | 7B | Q4 | 94.39 | 590 | 0.17s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Granite 3.2 Instruct | 8B | Q4 | 82.92 | 723 | 0.28s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Gemma 3 Instruct | 1B | Q4 | 262.58 ~~239.89~~ | 513 | 0.15s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Gemma 3 Instruct | 4B | Q4 | 138.04 ~~135.52~~ | 490 | 0.12s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Gemma 3 Instruct | 12B | Q4 | 57.72 ~~47.51~~ | 453 | 0.29s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Llama 3.2 Instruct | 1B | Q4 | 368.71 ~~360.55~~ | 514 | 0.00s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Llama 3.2 Instruct | 3B | Q4 | 180.40 ~~172.25~~ | 495 | 0.10s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Phi 4 | 15B | Q4 | 54.17 ~~10.79~~ | 565 | 0.83s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | DeepSeek R1 Distill Llama | 8B | Q4 | 91.03 ~~89.68~~ | 950 | 0.18s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | DeepSeek R1 Distill Qwen | 14B | Q4 | 51.94 ~~10.59~~ | 801 | 0.40s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | DeepSeek R1 Distill Qwen | 7B | Q4 | 94.61 ~~93.26~~ | 1190 | 0.17s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Qwen 2.5 Coder Instruct | 3B | Q4 | 175.49 ~~172.59~~ | 477 | 0.11s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Qwen 2.5 Coder Instruct | 14B | Q4 | 52.97 ~~10.62~~ | 494 | 0.40s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Qwen 2.5 Instruct 1M | 7B | Q4 | 97.47 ~~94.39~~ | 590 | 0.17s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Granite 3.2 Instruct | 8B | Q4 | 85.58 ~~82.92~~ | 723 | 0.28s |\n",
     "\n",
     "#### Power Level Testing Against Gemma 3 Instruct 4B\n",
     "\n",
@@ -159,6 +163,11 @@
     "Warzone 4k FSR4 Performance with just a few tweaked settings I normally get 200fps\n",
     "With the efficient 75% power settings I am still around 200fps but only running 255w."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
